--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "react-smooth-marquee": "^1.0.0",
     "reactstrap": "^8.9.0",
